unpackaged/main/default/objects/MaintenancePlan/fields/Trade__c.field-meta.xml
<CustomField>
    <fullName>Trade__c</fullName>
    <label>Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air Conditioning</fullName>
            </value>
            <value>
                <fullName>Bathroom Installation</fullName>
            </value>
            <value>
                <fullName>Cleaning</fullName>
            </value>
            <value>
                <fullName>Commercial Gas</fullName>
            </value>
            <value>
                <fullName>Decorating</fullName>
            </value>
            <value>
                <fullName>Domestic Gas</fullName>
            </value>
            <value>
                <fullName>Drainage</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Estimate</fullName>
            </value>
            <value>
                <fullName>Flooring</fullName>
            </value>
            <value>
                <fullName>Gardening</fullName>
            </value>
            <value>
                <fullName>General Building &amp; Multi Trade</fullName>
            </value>
            <value>
                <fullName>Glazing, UPVC &amp; Aluminium</fullName>
            </value>
            <value>
                <fullName>Handyman</fullName>
            </value>
            <value>
                <fullName>Kitchen Installation</fullName>
            </value>
            <value>
                <fullName>Leak Detection</fullName>
            </value>
            <value>
                <fullName>Locksmith</fullName>
            </value>
            <value>
                <fullName>Pest Control</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Refrigeration</fullName>
            </value>
            <value>
                <fullName>Refurbishment</fullName>
            </value>
            <value>
                <fullName>Roofing</fullName>
            </value>
            <value>
                <fullName>Scaffolding</fullName>
            </value>
            <value>
                <fullName>Ventilation</fullName>
            </value>
            <value>
                <fullName>Waste Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>