unpackaged/main/default/objects/MaintenancePlan/fields/Work_Type_Trade__c.field-meta.xml
<CustomField>
    <fullName>Work_Type_Trade__c</fullName>
    <formula>TEXT(WorkType.Trades__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Type Trade</label>
    <type>Text</type>
</CustomField>